<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcomen"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu1_opcionWelcomen" />
        <item
            android:id="@+id/nav_loggin"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu1_opcionLogin" />
        <item
            android:id="@+id/nav_registrer"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu1_opcionRegistros" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu1_borrarDatos" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu1_acerdaDe" />
        </menu>
    </item>

</menu>
