<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal"
    tools:context="es.ujaen.ssmm.ssmm1718_practica02_gr01.LogginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:src="@mipmap/andomus_letras" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/fragment_login_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/background_light"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--           <TextView
                android:id="@+id/textView_user"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:text="@string/fragment_login_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />
-->
            <EditText
                android:id="@+id/editText_login_user"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint=" Usuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_login_pass"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPersonName"
                android:password="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:text="@string/fragment_login_ip"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_login_ip"
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondotexto"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_port"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:text="@string/fragment_login_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_login_port"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:background="@drawable/fondotexto"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="70dp"
            android:layout_marginVertical="50dp"
            android:background="@drawable/fondoboton"
            android:text="@string/fragment_login_button" />

    </LinearLayout>

</FrameLayout>

